[package]
name = "arithmetic-progression-sum"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
plotters = { version = "0.3.0", optional = true }

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
